[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Bullet.tscn" type="PackedScene" id=2]

[node name="Player" type="Area2D"]
script = ExtResource( 1 )
projectile = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 0, -30, 20, 30, 0, 15, -20, 30 )

[node name="GraceTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="timeout" from="GraceTimer" to="." method="_on_GraceTimer_timeout"]
